--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <!--<link rel="stylesheet" type="text/css" href="./src/jquery.fancybox-1.3.4.css" media="screen">-->
 <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
 <link href="./src/css" rel="stylesheet" type="text/css">
-<link rel="icon" href="./src/images/favicon.png" type="image/x-icon">
-<link rel="shortcut icon" href="./src/images/favicon.png" type="image/x-icon">
+<link rel="icon" href="https://il89.github.io/wr/src/images/favicon.png" type="image/x-icon">
+<link rel="shortcut icon" href="https://il89.github.io/wr/src/images/favicon.png" type="image/x-icon">
 <link rel="image_src" href="./src/images/fb-icon.jpg">
 
 <!-- Google Analytics -->
