--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <!-- Links -->
 
-<link rel="stylesheet" href="./src/style.css" media="screen,projection" type="text/css">
+<link rel="stylesheet" href="https://il89.github.io/wr/src/style.css" media="screen,projection" type="text/css">
 <!--<link rel="stylesheet" type="text/css" href="./src/jquery.fancybox-1.3.4.css" media="screen">-->
 <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
 <link href="./src/css" rel="stylesheet" type="text/css">
