--- a/index.html
+++ b/index.html
@@ -54,13 +54,15 @@ _gaq.push(['_trackPageview']);
 <script type="text/javascript" src="./src/js/jquery.min.js"></script>
 <script type="text/javascript" src="./src/js/jquery.mousewheel-3.0.4.pack.js"></script>
 <!--<script type="text/javascript" src="./src/js/jquery.fancybox-1.3.4.pack.js"></script>-->
-<script type="text/javascript" src="./src/js/jquery.scrollTo-min.js"></script>
+
 <!-- 1. Add latest jQuery and fancyBox files -->
 
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<!--<script type="text/javascript" src="./src/js/jquery.scrollTo-min.js"></script>-->
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.1.20/jquery.fancybox.min.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.1.20/jquery.fancybox.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"></script>
 
 
 
