--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ _gaq.push(['_trackPageview']);
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.1.20/jquery.fancybox.min.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.1.20/jquery.fancybox.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"></script>
 
 
 
@@ -96,7 +96,7 @@ _gaq.push(['_trackPageview']);
   		}
 
   		if (scroll) {
-  			$.scrollTo(scroll, {
+  			$.scrollTo($(scroll), {
   				duration: 750
   			});
   		}
