--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ _gaq.push(['_trackPageview']);
 			'clickFotos': 'Жми на квадраты',
 			'rollover': 'Узнай нашу историю',
 			'parroquia': 'Церковь Ситжеса',
-			'ceremony': 'Празднование в 17:30',
+			'ceremony': 'Венчание в 17:30',
 			'dinner': 'Затем ужин и танцы',
 			'info': 'Дополнительная информация',
 			'directions': 'Маршрут',
@@ -330,22 +330,22 @@ _gaq.push(['_trackPageview']);
 			'sixthmoment_text':'Поездка в Париж, которую, кстати, Таня подарила Родриго на его день рождения, так как там выступала его любимая группа, закончилась ужином напротив Эйфелевой Башни, где Родриго сделал Тане самое главное предложение в его жизни.',
 			'seventhmoment_title':'8/09/2018',
 			'seventhmoment_text':'Таня не может устоять, и они выбирают День Астурьяс для празднования своей свадьбы, далеко от родины Родриго, но в месте ничуть не хуже - в церкви Ситжеса, у самого моря, на полпути между Астурьяс и Латвией, откуда родом Таня.',
-			'quote1':'Когда тебе нужна тысяча часов, чтоб собраться и завоевать улицы Рима.',
-			'quote2':'Когда ты сбегаешь на мотоцикле в самые красивые места вокруг Хихона.',
-			'quote3':'Когда ты в восемь раз лучше, чем Пикассо и Дали вместе.',
+			'quote1':'Когда тебе нужна тысяча часов, чтобы подготовиться к завоеванию улиц Рима.',
+			'quote2':'Когда побег на мотоцикле приводит тебя в самые красивые места вокруг Хихона.',
+			'quote3':'Когда ты в восемь раз лучше, чем Пикассо и Дали вместе взятые.',
 			'quote4':'Когда уже осень, а в Хероне все еще лето.',
 			'quote5':'Когда открываешь для себя пейзажи и горы Каталонии.',
-			'quote6':'Когда ты бежишь забег 31 декабря в Сабаделе, потому что в Барселоне он больше похож на марафон.',
-			'quote7':'Когда у тебя просто невероятные приключения на мотоцикле по национальным паркам Каталонии.',
+			'quote6':'Когда бежишь забег 31 декабря в Сабаделе, потому что в Барселоне этот забег больше похож на марафон.',
+			'quote7':'Когда наслаждаешься невероятными приключениями на мотоцикле по национальным паркам Каталонии.',
 			'quote8':'Когда у тебя есть возможность увидеть Linkin Park (RIP) вживую в Париже.',
 			'quote9':'Когда тебя удивляют кольцом прямо напротив Эйфелевой Башни.',
 			'quote10':'Когда идешь просто погулять, а попадаешь под страшнейший шторм.',
-			'quote11':'Когда ты собираешься переехать Голден Гейт на велосипеде, и это будет одним из лучших опытов в твоей жизни.',
-			'quote12':'Когда ты отмечаешь Новый Год в самой приятной компании.',
-			'quote13':'Когда ты познаешь улицы Парижа с самой чудесной летней погодой.',
+			'quote11':'Когда собираешься переехать Голден Гейт на велосипеде, и еще не подозреваешь, что это будет одним из лучших опытов в твоей жизни.',
+			'quote12':'Когда отмечаешь Новый Год в самой приятной компании.',
+			'quote13':'Когда познаешь улицы Парижа с самой чудесной летней погодой.',
 			'quote14':'Когда ты в Сан Франциско, но пробуешь японское пиво.',
 			'quote15':'Когда у тебя есть кот, которого зовут Кот, и ты празднуешь его день рождения каждые полгода.',
-			'quote16':'Когда ты съедаешь ведро эфиопской еды на празднование годовщины.',
+			'quote16':'Когда съедаешь ведро эфиопской еды на празднование годовщины.',
 			'quote17':'Когда идешь на ужин Премии Принцессы Астурийской в Овьедо, и в результате знакомишься с Королем Филиппом.',
 			'quote18':'Когда ты настоящий викинг и ходишь босиков по лесам Латвии.',
 			'p1':'Первая часть свадьбы - это, разумеется, венчание. Оно пройдет в Церкви Святого Варфоломея и Святой Феклы в Ситжесе, и начнется в 5:30 вечера. Ситжес находится в 40 км от Барселоны, и туда можно добраться как на машине, так и на поезде.',
