music title padding

--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@ _gaq.push(['_trackPageview']);
 	var arrLang = {
 		'en':{
 			'home': 'R&T',
+			'rodrigo':'Rodrigo |',
+			'tania':'Tania',
 			'pictures': 'Photos',
 			'story': 'Our story',
 			'event': 'Event info',
@@ -221,6 +223,8 @@ _gaq.push(['_trackPageview']);
 		},
 		'es':{
 			'home': 'R&T',
+			'rodrigo':'Rodrigo |',
+			'tania':'Tania',
 			'pictures': 'Fotos',
 			'story': 'Nuestra historia',
 			'event': 'Info Evento',
@@ -289,6 +293,8 @@ _gaq.push(['_trackPageview']);
 		},
 		'ru':{
 			'home': 'Р&Т',
+			'rodrigo':'Родриго |',
+			'tania':'Таня',
 			'pictures': 'Фотографии',
 			'story': 'Наша история',
 			'event': 'Информация',
@@ -583,7 +589,7 @@ _gaq.push(['_trackPageview']);
 
 			</form>
 
-			<h3 class="questions"><text class="lang" key='questions'>For Questions Email:</text> <a href="mailto:ralvarezecharri@gmail.com">Rodrigo | </a><a href="mailto:tanewxx@gmail.com">Tania</a></h3>
+			<h3 class="questions"><text class="lang" key='questions'>For Questions Email:</text> <a href="mailto:ralvarezecharri@gmail.com"><text class="lang" key="rodrigo"> Rodrigo | </text></a><a href="mailto:tanewxx@gmail.com"><text class="lang" key="tania">Tania</text></a></h3>
 
 		</div>
 	</div>
