--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 <link rel="stylesheet" href="https://il89.github.io/wr/src/style.css" media="screen,projection" type="text/css">
 <!--<link rel="stylesheet" type="text/css" href="./src/jquery.fancybox-1.3.4.css" media="screen">-->
 <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
-<link href="./src/css" rel="stylesheet" type="text/css">
+<link href="https://il89.github.io/wr/src/css" rel="stylesheet" type="text/css">
 <link rel="icon" href="https://il89.github.io/wr/src/images/favicon.png" type="image/x-icon">
 <link rel="shortcut icon" href="https://il89.github.io/wr/src/images/favicon.png" type="image/x-icon">
-<link rel="image_src" href="./src/images/fb-icon.jpg">
+<link rel="image_src" href="https://il89.github.io/wr/src/images/fb-icon.jpg">
 
 <!-- Google Analytics -->
 
-<script id="twitter-wjs" src="./src/js/widgets.js"></script><script type="text/javascript" async="" src="./src/js/ga.js"></script><script type="text/javascript">
+<script id="twitter-wjs" src="https://il89.github.io/wr/src/js/widgets.js"></script><script type="text/javascript" async="" src="./src/js/ga.js"></script><script type="text/javascript">
 
 var _gaq = _gaq || [];
 _gaq.push(['_setAccount', 'UA-XXXXXXX-1']);
@@ -51,8 +51,8 @@ _gaq.push(['_trackPageview']);
 
 <!-- Java Script -->
 
-<script type="text/javascript" src="./src/js/jquery.min.js"></script>
-<script type="text/javascript" src="./src/js/jquery.mousewheel-3.0.4.pack.js"></script>
+<script type="text/javascript" src="https://il89.github.io/wr/src/js/jquery.min.js"></script>
+<script type="text/javascript" src="https://il89.github.io/wr/src/js/jquery.mousewheel-3.0.4.pack.js"></script>
 <!--<script type="text/javascript" src="./src/js/jquery.fancybox-1.3.4.pack.js"></script>-->
 
 <!-- 1. Add latest jQuery and fancyBox files -->
@@ -148,7 +148,7 @@ _gaq.push(['_trackPageview']);
 
 
 </script>
-<script type="text/javascript" charset="utf-8" async="" src="./src/js/button.2ef3f9ec66d99ca2876b5333fb68c892.js"></script>
+<script type="text/javascript" charset="utf-8" async="" src="https://il89.github.io/wr/src/js/button.2ef3f9ec66d99ca2876b5333fb68c892.js"></script>
 <script type="text/javascript" charset="utf-8" async defer>
 	var arrLang = {
 		'en':{
