--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@ _gaq.push(['_trackPageview']);
 				<div class="forms">
   					<input type="name" name="name" placeholder="Your name" id="name-form" size="40">
   					<input type="email" name="email" placeholder="Your email" id="email-form" size="40">
-  					<input type="message" name="message" placeholder="Your message" id="message-form" size="31">
+  					<textarea type="message" name="message" placeholder="Your message" id="message-form" size="31"></textarea>
 
 					<!--<input type="text" name="name" id="name-form" size="45">
 					<input type="text" name="email" id="email-form" size="45">-->
