--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@ _gaq.push(['_trackPageview']);
 
 				<div class="forms">
   					<input type="name" name="name" placeholder="Your name" id="name-form" size="40">
-  					<input type="email" name="email" placeholder="Your email" id="email-form" size="40">
+  					<input type="email" name="_replyto" placeholder="Your email" id="email-form" size="40">
   					<textarea type="message" name="message" placeholder="Your message" id="message-form" size="31"></textarea>
 
 					<!--<input type="text" name="name" id="name-form" size="45">
