--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@ _gaq.push(['_trackPageview']);
 
 			<h2 class="lang" key='rsvp'>Tell us if you're coming!</h2>
 
-			<form name="rsvp-now" class="rsvp-now" action="http://formspree.io/ralvarezecharri@gmail.com" method="post" onsubmit="window.open(&#39;&#39;,&#39;my_form_target&#39;, &#39;width=300,height=120&#39;, true); this.target=&#39;my_form_target&#39;;" target="my_form_target">
+			<form name="rsvp-now" class="rsvp-now" action="http://formspree.io/ralvarezecharri@gmail.com" method="post" >
 
 				<div class="labels">
 					<label   for="name"><h3 class="your-name lang" key='nombre'>Your Name</h3></label>
