--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ _gaq.push(['_trackPageview']);
 				<li class="story-nav lang" key="story" onclick="scrollNav(&#39;.story&#39;)">Our story</li>
 				<li class="info-nav lang" key="event" onclick="scrollNav(&#39;.info&#39;)">Event info</li>
 				<li class="party-nav lang" key="photos" onclick="scrollNav(&#39;.party&#39;)">Wedding photos</li>
-				<li class="rsvp-nav lang" key="rsvp" onclick="scrollNav(&#39;.rsvp&#39;)">Confirmation</li>
+				<!--<li class="rsvp-nav lang" key="rsvp" onclick="scrollNav(&#39;.rsvp&#39;)">Confirmation</li>-->
 				<li class="gifts-nav lang" key="gifts" onclick="scrollNav(&#39;.gifts&#39;)">Gifts</li>
 				<li class="music-nav lang" key="music" onclick="scrollNav(&#39;.music&#39;)">Music</li>
 			</ul>
@@ -559,7 +559,7 @@ _gaq.push(['_trackPageview']);
 	</div>
 
 	<!-- RSVP Frame -->
-
+<!--
 	<div class="rsvp slide">
 		<div class="content-box">
 
@@ -582,13 +582,13 @@ _gaq.push(['_trackPageview']);
 
 					<!--<input type="text" name="name" id="name-form" size="45">
 					<input type="text" name="email" id="email-form" size="45">-->
-				</div>
+			<!--	</div>
 
 				<div class="submit-container">
 					<div class="submit">
 						<input class="submit-btn" type="submit" value="submit"></input>
 						<!--<input  type="submit" name="submit" >-->
-					</div>
+					<!--</div>
 
 				</div>
 
@@ -598,7 +598,7 @@ _gaq.push(['_trackPageview']);
 
 		</div>
 	</div>
-
+-->
 	<!-- Gifts Frame -->
 
 	<div class="gifts slide">
