--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
 
 <!-- Google Analytics -->
 
-<script id="twitter-wjs" src="https://il89.github.io/wr/src/js/widgets.js"></script><script type="text/javascript" async="" src="./src/js/ga.js"></script><script type="text/javascript">
+<script id="twitter-wjs" src="https://il89.github.io/wr/src/js/widgets.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110552891-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-XXXXXXX-1']);
-_gaq.push(['_trackPageview']);
+  gtag('config', 'UA-110552891-1');
+</script>
 
-(function() {
-	var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-	ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
 
-</script><style>@media print {#ghostery-purple-box {display:none !important}}</style>
+<style>@media print {#ghostery-purple-box {display:none !important}}</style>
 
 <!-- Java Script -->
 
