--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <!-- Meta Tags -->
 
 
-<meta name="description" content="Tatjana Asa &amp; Rodrigo Alvarez se van a casar el 08.09.2018. Venir a celebrarlo!">
-<meta name="keywords" content="Tatjana Asa, Rodrigo Alvarez, marriage">
+<meta name="description" content="¡Nos casamos! Venid a celebrarlo con nosotros el 8/9/18">
+<meta name="keywords" content="Tania Asa, Rodrigo Alvarez, marriage">
 <meta name="author" content="Rodrigo Alvarez">
-<meta property="og:title" content="Rodrigo & Tania are getting Married!">
-<meta property="og:description" content="Rodrigo Alvarez &amp; Tatjana Asa se van a casar el 08.09.2018. Venir a celebrarlo!">
+<meta property="og:title" content="Rodrigo & Tania 8/9/18 #ilysb8918">
+<meta property="og:description" content="¡Nos casamos! Venid a celebrarlo con nosotros el 8/9/18">
 <meta property="og:image" content="./src/">
 <meta property="og:url" content="http://www.ilysb8918.com">
 <meta property="fb:admins" content="">
